# LidarVisualisation

./: CMakeLists.txt  README.md
src/: CoordinateGrid.cpp  CoordinateGrid.h  Lidar.cpp  Lidar.h  Modes.h  Obstacle.cpp  Obstacle.h  Telegram.cpp  Telegram.h  TitleStatus.cpp  TitleStatus.h  Utils.h  main.cpp
